<resources>
    <string name="app_name">Kum Ase - Get Up &amp; Do</string>
    <string name="already_have_an_account_login">Already have an account? <font fgcolor='#0B4E87'>Login</font></string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? <font fgcolor='#0B4E87'>Signup</font></string>
    <string name="error_please_connect_to_internet">Please connect to internet.</string>
    <string name="error_something_went_wrong">Something went wrong!</string>


    <!-- Introduction title-->
    <string name="intro_title_1">Set Alarm \n הגדר אזעקה</string>
    <string name="intro_title_2">Select Time \n בחר זמן</string>
    <string name="intro_title_3">Subscribe \n הירשם</string>
    <string name="intro_title_4">exceptional REWARDS \n פרסים יוצאי דופן</string>

    <!-- Introduction Description-->
    <string name="intro_desc_1">Set or Add Alarm! \n הגדר או הוסף אזעקה! \n Set or Add new Alarm for your Prayer! \n הגדר או הוסף אזעקה חדשה לתפילה שלך!</string>
    <string name="intro_desc_2">Select Time and add alarm tone! \n בחר זמן והוסף צליל אזעקה! \n Select Suitable time for Prayer ! \n בחר זמן מתאים לתפילה!</string>
    <string name="intro_desc_3">Subscribe with plan! \n הירשם עם תוכנית! \n Set unlimited alarm for your prayer ! \n הגדר אזעקה בלתי מוגבלת לתפילה שלך!</string>
    <string name="intro_desc_4">Be our member! \n תהיה חבר שלנו! \n Make the most with our BEST offers! \n הפק את המרב עם ההצעות הטובות ביותר שלנו!</string>


    <string name="action_skip">Skip \n לדלג</string>
    <string name="action_next">Next \n הַבָּא</string>
    <string name="action_continue">Continue \n לְהַמשִׁיך</string>
    <string name="action_previous">Previous \n קודם</string>


    <!-- Activity_AlarmsList -->
    <string name="no_alarm">No alarms to show!</string>
    <string name="addAlarm">Add</string>
    <string name="settingsMenuItem">Settings</string>
    <string name="toast_alarmSwitchedOn">Alarm set for %s from now.</string>
    <plurals name="day">
        <item quantity="one">\u0020day</item>
        <item quantity="other">\u0020days</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">\u0020hour</item>
        <item quantity="other">\u0020hours</item>
    </plurals>
    <plurals name="mins">
        <item quantity="one">\u0020minute</item>
        <item quantity="other">\u0020minutes</item>
    </plurals>
    <string name="and">\u0020and\u0020</string>
    <string name="toast_alarmDeleted">The alarm at %s was deleted successfully.</string>
    <string name="toast_alarmSwitchedOff">The alarm at %s was switched off.</string>

    <!-- Activity_AlarmDetails -->
    <string name="actionBarTitle_newAlarm">New alarm</string>
    <string name="actionBarTitle_editAlarm">Edit alarm</string>
    <string name="actionBarTitle_snoozeOptions">Snooze options</string>
    <string name="actionBarTitle_repeatOptions">Repeat options</string>
    <string name="actionBarTitle_dateOptions">Alarm date</string>
    <string name="actionBarTitle_alarmMessage">Alarm message</string>

    <!-- Fragment_AlarmDetails_Main -->
    <string name="saveButton">SAVE</string>
    <string name="cancelButton">Cancel</string>

    <string name="repeatButton">Repeat:</string>
    <string name="repeatNone">Off</string>
    <string name="alarmType">Alarm type:</string>
    <string name="alarmVolumeLabel">Alarm Volume:</string>
    <string name="snoozeLabel">Snooze:</string>
    <string name="snoozeOffLabel">Off</string>
    <string name="alarmDateLabel">Alarm date:</string>
    <string name="alarmDate">%te\u0020%tm,\u0020%tY</string>

    <string-array name="alarmTypeSpinnerEntries">
        <item>Sound</item>
        <item>Vibrate</item>
        <item>Sound &amp; Vibrate</item>
    </string-array>

    <string name="timeOptionsTV_snoozeOn">%d sec</string>
    <string name="snoozeOptionsTV_snoozeOn">%d mins, %d times</string>
    <string name="alarmToneLabel">Alarm tone:</string>

    <string name="alarmMessageLabel">Alarm message:</string>
    <string name="alarmMessage_default">Not set</string>

    <!-- Fragment_AlarmDetails_Snooze-->
    <string name="switchOn">On</string>
    <string name="switchOff">Off</string>

    <string name="snoozeFrequencyLabel">Snooze frequency:</string>
    <string name="snoozeFreq_three">3 times</string>
    <string name="snoozeFreq_five">5 times</string>
    <string name="snoozeFreq_ten">10 times</string>
    <string name="snoozeFreq_custom">Custom frequency:</string>
    <string name="snoozeFreq_customHint">Enter a number</string>

    <string name="snoozeIntervalLabel">Snooze interval:</string>
    <string name="snoozeInterval_five">5 minutes</string>
    <string name="snoozeInterval_ten">10 minutes</string>
    <string name="snoozeInterval_fifteen">15 minutes</string>
    <string name="snoozeInterval_custom">Custom interval (in mins):</string>
    <string name="snoozeInterval_customHint">Enter interval</string>

    <!-- AlarmAdapter -->
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound_and_vibrate">Sound &amp; Vibrate</string>

    <string name="time_24hour">%02d:%02d</string>
    <string name="time_12hour">%d:%02d\u0020%s</string>
    <string name="date">%s,\u0020%02d\u0020%s</string>

    <!-- Activity_RingAlarm-->
    <string name="alarmMessage">Alarm</string>
    <string name="alarmTime_24hour">%02d:%02d</string>
    <string name="snoozeAlarm">Snooze</string>

    <!-- Fragment_AlarmDetails_DatePicker-->
    <string name="pickDateLabel">Pick a date:</string>

    <!-- Fragment_AlarmDetails_RepeatOptions-->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- Fragment_AlarmDetails_Message -->
    <string name="message_label">Enter the alarm message in no more than 50 characters:</string>

    <!-- Service_RingAlarm -->
    <string name="notifContent_ring">Alarm ringing. Tap to launch alarm screen.</string>

    <!-- Service_SnoozeAlarm -->
    <string name="notifContent_snooze">Alarm snoozed.</string>
    <string name="notifAction">Dismiss alarm.</string>

    <!-- Activity_RingtonePicker -->
    <string name="chooseCustomTone">Choose from storage</string>
    <string name="defaultTone">Default</string>
    <string name="silentTone">Silent</string>
    <string name="play_tone">Play tone</string>
    <string name="ringtonePicker_defaultTitle">Select tone:</string>

    <!-- AlertDialog_DiscardChanges -->
    <string name="cancelDialogMessage">Discard changes?</string>
    <string name="cancelDialog_positive">Yes</string>
    <string name="cancelDialog_negative">No</string>

    <!-- AlertDialog_PermissionReason -->
    <string name="permissionReasonExp_normal">This app needs permission to read your device storage so that
    it can read and play the alarm sound. Without this permission, the app may fail to ring the alarm. Give the permission?</string>

    <string name="permissionReasonExp_ringtonePicker">This app needs permission to read your device storage
        so that it can read the tones. Without this permission, the app will not work. Give the permission?</string>

    <!-- Activity_Settings -->
    <string name="settings_title">Settings</string>
    <string name="shakeOp">If I <b>shake</b> the phone when an alarm rings,</string>
    <string name="powerBtnOp">If I press the <b>power button</b> when an alarm rings,</string>
    <string-array name="shakeAndPowerOptions">
        <item>Snooze the alarm.</item>
        <item>Dismiss the alarm.</item>
    </string-array>
    <string name="settings_snoozeOps"><b>Default snooze options</b>\n<small>(These will be the default snooze options
        when you create a new alarm.)</small></string>
    <string name="settings_snoozeInterval">Snooze interval in minutes:</string>
    <string name="settings_snoozeFreq">Snooze frequency:</string>

    <string name="settings_theme">Choose the theme:</string>
    <string-array name="themeOptions_noSystem">
        <item>According to time</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themeOptions_all">
        <item>According to time</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Set by system</item>
    </string-array>

    <string name="settings_toneUri">Default alarm tone:</string>
    <string name="settings_volume">Default alarm volume:</string>
    <string name="settings_toneCheckbox">Automatically set new tones I select as default tones for new alarms</string>

    <string name="settings_shakeSensitivityMainLabel"><b>Shake sensitivity settings</b>\n<small>Test the sensitivity of the shake
        detector, and change it as you wish</small></string>
    <string name="shakeSensitivityChangeLabel"><small>Change sensitivity:</small></string>
    <string name="leastSensitiveLabel">\u2191\nLeast\nsensitive</string>
    <string name="mostSensitiveLabel">\u2191\nMost\nsensitive</string>
    <string name="testShake"><small><b>Test shake sensitivity</b>\nTap to enable the shake detector so that you can
        choose the sensitivity that correctly suits you.</small></string>

    <!-- Service_UpdateAlarm -->
    <string name="updateAlarm_notifMessage">Activating alarms. This may take a while…</string>
    <string name="updateAlarm_alarmMissedTitle">Alarm missed!</string>
    <string name="updateAlarm_alarmMissedText">The alarm at %s did not ring.</string>

    <!-- AlertDialog_TestShakeSensitivity -->
    <string name="title_shakeDetectionTest">Test sensitivity of shake detector</string>
    <string name="message_shakeDetectionTest">Shake your phone. A vibration will tell you that a shake event has
    been detected. Change the sensitivity as per your choice.</string>
    <string name="negative_shakeDetectionTest">Stop</string>

    <!-- AlertDialog_BatteryOptimizations -->
    <string name="batteryOptim_message">Please disable battery optimizations for this app. If this app is
        optimized, it might not be able to ring the alarm.</string>
    <string name="batteryOptim_title">Disable battery optimizations</string>
    <string name="batteryOptim_positive">Proceed</string>
    <string name="batteryOptim_negative">Maybe later</string>
    <string name="batteryOptim_neutral">Never show again</string>

    <string name="defaultAlarmToneText">Default alarm tone</string>

    <string name="require_permission_exact_alarms">Require permission to set exact alarms</string>
    <string name="request_exact_alarm_perm">On Android S and higher, the app needs permission to schedule exact alarms. Without this, no alarm can
        be set. Please go to Settings and enable this permission to continue setting an alarm.</string>
    <string name="grant_permission">Missing permission</string>

    <string name="error_notif_title">Error in setting alarms!</string>
    <string name="error_notif_body">Alarms could not be set due to missing permission. Tap to see details.</string>
    <string name="perm_granted">Thanks for the permission. Setting up alarms. You may close the app.</string>

    <!-- Notification Channel Names -->
    <string name="notif_channel_name_ring_alarms">Ringing alarms</string>
    <string name="notif_channel_name_snoozed_alarms">Snoozed alarms</string>
    <string name="notif_channel_error">Errors</string>
    <string name="notif_channel_update">Updating alarms</string>

    <string name="subscription_terms">Subscriptions are recurring. You will be automatically be billed through your Google Play Store Account. Your subscription will auto-renew unless you cancel. You can manage your subscription in the settings in the Google Play Store</string>
    <string name="footer">design: www.freepik.com</string>
</resources>