<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SelectSnoozeActivity">

    <data>

        <variable
            name="clickListener"
            type="com.app.kumase_getupdo.SelectSnoozeActivity" />
    </data>

    <com.jbs.general.widget.GeneralLinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_main_gradient"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.jbs.general.widget.GeneralLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/ic_back"
                app:tint="@color/white_100" />

            <com.jbs.general.widget.GeneralAppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="Select Snooze"
                style="@style/NormalTextStyle"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/snoozeOnOffSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="50sp"
            android:layout_marginEnd="15dp"
            android:checked="true"
            android:enabled="false"
            android:focusable="false"
            android:clickable="false"
            android:layout_gravity="end"/>

        </com.jbs.general.widget.GeneralLinearLayout>

            <com.jbs.general.widget.GeneralLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_white"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/snoozeFreqRadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8">

                    <RadioButton
                        android:id="@+id/freqRadioButton_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeFreq_three"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/freqRadioButton_five"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeFreq_five"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/freqRadioButton_ten"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeFreq_ten"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/freqRadioButton_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeFreq_custom" />
                </RadioGroup>

                <EditText
                    android:id="@+id/snoozeFreqEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="30"
                    android:ems="10"
                    android:hint="@string/snoozeFreq_customHint"
                    android:inputType="number"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/snoozeFreqRadioGroup" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/snoozeFrequencyLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider9" />

                <View
                    android:id="@+id/divider9"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/divider10"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/snoozeFreqEditText" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/snoozeIntervalLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider10" />

                <RadioGroup
                    android:id="@+id/snoozeIntervalRadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9">

                    <RadioButton
                        android:id="@+id/intervalRadioButton_five"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeInterval_five"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/intervalRadioButton_ten"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeInterval_ten"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/intervalRadioButton_fifteen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeInterval_fifteen"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/intervalRadioButton_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snoozeInterval_custom"
                        android:textSize="15sp" />
                </RadioGroup>

                <EditText
                    android:id="@+id/snoozeIntervalEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="15sp"
                    android:ems="10"
                    android:hint="@string/snoozeFreq_customHint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/snoozeIntervalRadioGroup" />


            </androidx.constraintlayout.widget.ConstraintLayout>

                </ScrollView>

            </com.jbs.general.widget.GeneralLinearLayout>
    </com.jbs.general.widget.GeneralLinearLayout>

</layout>